fixed contact alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ p {
 .spacer {
   text-align: center;
   position: relative;
+  padding-top: 50px;
 }
 
 .avatar {
@@ -213,9 +214,9 @@ p {
   font-size: 30px;
   font-size: 3.0vw;
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -20%);
   text-align: center;
 }
 
@@ -292,42 +293,41 @@ p {
 
 .contact-text {
   font-size: 25px;
+  padding: 75px;
 }
 
-.contacts ul {
-  list-style: none;
-  margin-right: 5%;
-}
-
-.contacts ul li {
+.contact-icon {
+  text-align: center;
+  background: #444;
   padding: 25px;
 }
 
-.contacts div {
+.icon {
   display: inline-block;
-  vertical-align: middle;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
-.contacts ul li a {
-  width: 60px;
-  height: 60px;
+.icon a {
+  width: 75px;
+  height: 75px;
   text-align: center;
   display: inline-block;
   border-radius: 20%;
-  box-shadow: 0 5px 10px -5px #6ac468;
+  box-shadow: 0 5px 15px -5px #6ac468;
   color: #6ac468;
   background: #fff;
   overflow: hidden;
   position: relative;
 }
 
-.contacts ul li a i {
-    line-height: 60px;
-    font-size: 25px;
+.icon a i {
+    line-height: 75px;
+    font-size: 30px;
     transition: 0.2s linear;
 }
 
-.contacts ul li a:hover i {
+.icon a:hover i {
   transform: scale(1.3);
   color: #f1f1f1;
 }
